Add managament and http modules